--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<h1> SWOT-Analyse <h1/>
+<h1>IFD-WiSe-20/21<h1/>
     <a href="https://xd.adobe.com/view/614feed2-5b6f-424b-9f63-3bcf6bbdc6ca-341c/">Aufgabe 0</a>
+    <a href="https://xd.adobe.com/view/29affed9-2dab-4f48-aae5-cfdfedf05695-7cfc/">Aufgabe 1</a>
+    
