--- a/index.html
+++ b/index.html
@@ -1,4 +1,20 @@
+<!DOCTYPE html>
+<html lang="de">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+    <title>Inferface Design</title>
+  </head>
+  <body>
+<div class="header">
 <h1>IFD-WiSe-20/21<h1/>
-    <a href="https://xd.adobe.com/view/614feed2-5b6f-424b-9f63-3bcf6bbdc6ca-341c/">Aufgabe 0</a>
-    <a href="https://xd.adobe.com/view/29affed9-2dab-4f48-aae5-cfdfedf05695-7cfc/">Aufgabe 1</a>
-    
+    </div>
+    <div class="content">
+    <a class="work" href="https://xd.adobe.com/view/614feed2-5b6f-424b-9f63-3bcf6bbdc6ca-341c/">Aufgabe 0</a>
+    <a class="work" href="https://xd.adobe.com/view/29affed9-2dab-4f48-aae5-cfdfedf05695-7cfc/">Aufgabe 1</a>
+    <a class="work" href="https://xd.adobe.com/view/2eabab24-8736-44cf-a009-1f0754008082-7bf8/">Aufgabe 2.1</a>
+    <a class="work" href="file:///Users/volkangultekin/Desktop/IFD---WiSe-20-21/Aufgabe%202.2.pdf">Aufgabe 2.2 PDF</a>
+        </div>
+      </body>
+</html>
