--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a class="work" href="https://xd.adobe.com/view/614feed2-5b6f-424b-9f63-3bcf6bbdc6ca-341c/">Aufgabe 0</a>
     <a class="work" href="https://xd.adobe.com/view/29affed9-2dab-4f48-aae5-cfdfedf05695-7cfc/">Aufgabe 1</a>
     <a class="work" href="https://xd.adobe.com/view/2eabab24-8736-44cf-a009-1f0754008082-7bf8/">Aufgabe 2.1</a>
-    <a class="work" href="file:///Users/volkangultekin/Desktop/IFD---WiSe-20-21/Aufgabe%202.2.pdf">Aufgabe 2.2 PDF</a>
+    <a class="work" href="file:///Users/volkangultekin/Desktop/IFD---WiSe-20-21/Aufgabe2.2.pdf">Aufgabe2.2</a>
         </div>
       </body>
 </html>
