--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="content">
     <a class="work" href="https://xd.adobe.com/view/614feed2-5b6f-424b-9f63-3bcf6bbdc6ca-341c/">Aufgabe 0</a>
     <a class="work" href="https://xd.adobe.com/view/29affed9-2dab-4f48-aae5-cfdfedf05695-7cfc/">Aufgabe 1</a>
-    <a class="work" href="https://xd.adobe.com/view/2eabab24-8736-44cf-a009-1f0754008082-7bf8/">Aufgabe 2.1</a>
+    <a class="work" href="https://xd.adobe.com/view/2eabab24-8736-44cf-a009-1f0754008082-7bf8/">Aufgabe 2.1<br>Mit Kevin Attinger</a>
     <a class="work" href="Aufgabe2.2.pdf">Aufgabe2.2</a>
         </div>
       </body>
