--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <a class="work" href="https://xd.adobe.com/view/2eabab24-8736-44cf-a009-1f0754008082-7bf8/">Aufgabe 2.1<br>Mit Kevin Attinger</a>
     <a class="work" href="Aufgabe2.2.pdf">Aufgabe2.2</a>
     <a class="work" href="https://xd.adobe.com/view/632483ac-aa34-4138-b39d-77bec8618e85-3677/">Aufgabe 3</a>
+    <a class="work" href="aufgabe4.pdf">Aufgabe 4</a>
         </div>
       </body>
 </html>
